[gd_scene load_steps=20 format=3 uid="uid://bmau1vr8akkpp"]

[ext_resource type="Script" path="res://scenes/stage2/stage2.gd" id="1_gxxay"]
[ext_resource type="AudioStream" uid="uid://cb54mtjcxbve7" path="res://music/vitamine-coin-loop.mp3" id="2_3gqv0"]
[ext_resource type="Script" path="res://scenes/main/powerupspawner.gd" id="3_tnedk"]
[ext_resource type="PackedScene" uid="uid://mjb5wt0n5qkt" path="res://scenes/powerup/powerup.tscn" id="4_lkpq7"]
[ext_resource type="Script" path="res://scenes/main/spawner_event.gd" id="5_p1rpy"]
[ext_resource type="Texture2D" uid="uid://cs5t6fow78urc" path="res://assets/stage2/bayouWATER1.png" id="6_wgp1n"]
[ext_resource type="Shader" path="res://water.gdshader" id="7_ou7tq"]
[ext_resource type="Texture2D" uid="uid://c6kqboj4yhlom" path="res://scenes/main/Screenshot-2021-12-28-122056.png" id="8_rixg5"]
[ext_resource type="Texture2D" uid="uid://deeyxes5np8ov" path="res://assets/stage2/bayou-Sheetv3.png" id="9_fedjo"]
[ext_resource type="Shader" path="res://scenes/main/raylight.gdshader" id="11_lwdah"]
[ext_resource type="PackedScene" uid="uid://dkqeml1ukrwrk" path="res://scenes/interfaces/player_HUD.tscn" id="12_hf3ke"]
[ext_resource type="PackedScene" uid="uid://b04a65tqnnypo" path="res://scenes/interfaces/winner_panel.tscn" id="12_kkvxs"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_drb20"]
noise_type = 0
frequency = 0.0009

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_pm2x6"]
seamless = true
noise = SubResource("FastNoiseLite_drb20")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q0v4e"]
shader = ExtResource("7_ou7tq")
shader_parameter/refraction_stretch = Vector2(1, 1)
shader_parameter/refraction_strength = 0.02
shader_parameter/water_tint = Color(0.2, 0.6, 1, 0.1)
shader_parameter/speed = 0.141
shader_parameter/refraction_map = SubResource("NoiseTexture2D_pm2x6")

[sub_resource type="AtlasTexture" id="AtlasTexture_2x5i5"]
atlas = ExtResource("9_fedjo")
region = Rect2(0, 0, 500, 281)

[sub_resource type="AtlasTexture" id="AtlasTexture_jolcg"]
atlas = ExtResource("9_fedjo")
region = Rect2(500, 0, 500, 281)

[sub_resource type="SpriteFrames" id="SpriteFrames_fye1o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x5i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jolcg")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nemay"]
shader = ExtResource("11_lwdah")
shader_parameter/angle = -0.3
shader_parameter/position = -0.2
shader_parameter/spread = 0.5
shader_parameter/cutoff = 0.1
shader_parameter/falloff = 0.2
shader_parameter/edge_fade = 0.513
shader_parameter/speed = 2.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(0.537253, 0.350908, 0.0356049, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[node name="Main" type="Node2D"]
script = ExtResource("1_gxxay")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3gqv0")
autoplay = true

[node name="spawnerpower" type="Node2D" parent="."]
z_index = 50
script = ExtResource("3_tnedk")
powerup_scene = ExtResource("4_lkpq7")
spawn_area = Rect2(110, 90, 905, 468)

[node name="spawnerEvent" type="Node2D" parent="."]
z_index = 51
script = ExtResource("5_p1rpy")

[node name="water" type="Sprite2D" parent="."]
modulate = Color(0.724643, 0.724643, 0.724643, 1)
position = Vector2(572.854, 328)
scale = Vector2(2.36858, 2.50534)
texture = ExtResource("6_wgp1n")

[node name="shader" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_q0v4e")
position = Vector2(573, 322)
scale = Vector2(1.05904, 0.827225)
texture = ExtResource("8_rixg5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(575.178, 323.75)
scale = Vector2(2.30071, 2.30071)
sprite_frames = SubResource("SpriteFrames_fye1o")
autoplay = "default"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(50, 380, 77, 216, 92, 128, 140, 80, 251, 39, 847, 36, 970, 64, 1033, 115, 1089, 199, 1108, 331, 1090, 459, 1049, 550, 926, 604, 857, 614, 564, 615, 263, 610, 175, 580, 89, 520, 68, 479, 52, 439, 50, 403, -2, 376, 1, 660, 1180, 649, 1156, -37, -16, -31, 4, 403)

[node name="markerp1" type="Marker2D" parent="."]
position = Vector2(986, 172)

[node name="markerp2" type="Marker2D" parent="."]
visible = false
position = Vector2(960, 499)

[node name="markerp3" type="Marker2D" parent="."]
visible = false
position = Vector2(168, 481)

[node name="markerp4" type="Marker2D" parent="."]
visible = false
position = Vector2(159, 153)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_nemay")
offset_left = -595.0
offset_top = -334.0
offset_right = 1126.0
offset_bottom = 649.0

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1Hud" parent="GUI" instance=ExtResource("12_hf3ke")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 19.0
offset_top = 11.0
offset_right = 19.0
offset_bottom = 11.0
grow_horizontal = 1
grow_vertical = 1

[node name="Player2Hud" parent="GUI" instance=ExtResource("12_hf3ke")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = 940.0
offset_top = 8.0
offset_right = 940.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 1

[node name="Player3Hud" parent="GUI" instance=ExtResource("12_hf3ke")]
layout_mode = 1
offset_left = 12.0
offset_top = 571.0
offset_right = 12.0
offset_bottom = 571.0

[node name="Player4Hud" parent="GUI" instance=ExtResource("12_hf3ke")]
layout_mode = 1
offset_left = 943.0
offset_top = 577.0
offset_right = 943.0
offset_bottom = 577.0

[node name="EventsMarker" type="Node2D" parent="."]

[node name="MarkEvent1" type="Marker2D" parent="EventsMarker"]
position = Vector2(550, 100)

[node name="MarkEvent2" type="Marker2D" parent="EventsMarker"]
position = Vector2(550, 550)

[node name="MarkEvent3" type="Marker2D" parent="EventsMarker"]
position = Vector2(200, 320)

[node name="MarkEvent4" type="Marker2D" parent="EventsMarker"]
position = Vector2(950, 320)

[node name="MarkEvent5" type="Marker2D" parent="EventsMarker"]
position = Vector2(550, 320)

[node name="MarkEvent6" type="Marker2D" parent="EventsMarker"]
position = Vector2(950, 130)

[node name="MarkEvent7" type="Marker2D" parent="EventsMarker"]
position = Vector2(950, 550)

[node name="MarkEvent8" type="Marker2D" parent="EventsMarker"]
position = Vector2(200, 100)

[node name="MarkEvent9" type="Marker2D" parent="EventsMarker"]
position = Vector2(200, 550)

[node name="WinnerPanel" parent="." instance=ExtResource("12_kkvxs")]
visible = false
offset_left = 543.0
offset_top = 287.0
offset_right = 543.0
offset_bottom = 287.0
